--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
     "require": {
         "monolog/monolog": "^1.21"
     },
+    "require-dev": {
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~4.0"
+    },
     "autoload": {
         "psr-4": {
             "MemoryFile\\": "src/"
