--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "monolog/monolog": "^1.21"
-    },
-    "require-dev": {
+        "monolog/monolog": "^1.21",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0"
+    },
+    "require-dev": {
     },
     "autoload": {
         "psr-4": {
